Fix padding not showing on small screens

--- a/src/css/layouts/layouts.css
+++ b/src/css/layouts/layouts.css
@@ -21,6 +21,16 @@
 .col-sm-6,
 .col-sm-8,
 .col-sm-9,
+.col-sm-12 {
+	padding-right: 16px !important;
+	padding-left: 16px !important;
+}
+
+.col-sm-3,
+.col-sm-4,
+.col-sm-6,
+.col-sm-8,
+.col-sm-9,
 .col-sm-12,
 .col-md-2,
 .col-md-4,
